src/styles/global.css
@charset "UTF-8";

.nav ul {
  list-style-type: none;
}

ul {
  list-style-type: circle;
  margin-left: 2em;
}

body {
  font-family: "Nunito", sans-serif;
  font-weight: 300;
  background-color: #fffff8;
  color: #111;
  counter-reset: sidenote-counter;
  line-height: 1;
}

/* Some global reset reset. */

/* Make sure strikethroughs are struckthrough */
del {
  text-decoration-line: line-through;
}

em {
  font-style: italic;
}

strong {
  font-weight: bold;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "Roboto Slab", serif;
}

h1 {
  font-weight: 600;
  font-size: 2.2rem;
  line-height: 1.4;
  margin-bottom: 1.5rem;
  margin-top: 4rem;
}

h2 {
  font-size: 1.8rem;
  margin-bottom: 1.4rem;
  margin-top: 2.1rem;
  line-height: 1.4;
}

h3 {
  font-size: 1.7rem;
  line-height: 1.4;
}

hr {
  display: block;
  height: 1px;
  width: 55%;
  border: 0;
  border-top: 1px solid #ccc;
  padding: 0;
  margin: 1em auto;
}

p.subtitle {
  margin-top: 1rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  display: block;
  line-height: 1;
}

.danger {
  color: red;
}

a:any-link {
  text-decoration: underline;
  cursor: pointer;
}

article {
  padding: 5rem 0rem;
}

section {
  padding-top: 1rem;
  padding-bottom: 1rem;
}

p,
ol,
ul {
  font-size: 1.2rem;
  line-height: 1.8rem;
}

p {
  margin-top: 1.4rem;
  margin-bottom: 1.4rem;
  padding-right: 0;
  vertical-align: baseline;
}

blockquote {
  font-size: 1.4rem;
  padding-left: 2em;
  border-left-style: solid;
  border-left-width: 2px;
}

blockquote p {
  width: 80%;
  margin-right: 40px;
}

blockquote footer {
  width: 55%;
  font-size: 1.1rem;
  text-align: right;
}

section > p,
section > footer,
section > table {
  width: 55%;
}

/* 50 + 5 == 55, to be the same width as paragraph */
section > ol,
section > ul {
  width: 50%;
  -webkit-padding-start: 5%;
}

li:not(:first-child) {
  margin-top: 0.25rem;
}

figure {
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  max-width: 55%;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
  margin: 0 0 3em 0;
}

figcaption {
  float: right;
  clear: right;
  margin-top: 0;
  margin-bottom: 0;
  font-size: 1.1rem;
  line-height: 1.6;
  vertical-align: baseline;
  position: relative;
  max-width: 40%;
}

/* Links: replicate underline that clears descenders */
a:link,
a:visited {
  color: inherit;
}

a:link::selection,
a:link::-moz-selection {
  text-shadow: 0.03em 0 #b4d5fe, -0.03em 0 #b4d5fe, 0 0.03em #b4d5fe,
    0 -0.03em #b4d5fe, 0.06em 0 #b4d5fe, -0.06em 0 #b4d5fe, 0.09em 0 #b4d5fe,
    -0.09em 0 #b4d5fe, 0.12em 0 #b4d5fe, -0.12em 0 #b4d5fe, 0.15em 0 #b4d5fe,
    -0.15em 0 #b4d5fe;
  background: #b4d5fe;
}

/* Sidenotes, margin notes, figures, captions */
img {
  max-width: 100%;
}

/* Some content that's supposed to pop out visually */
.pop {
  background-color: #d6d6c7;
  padding: 20px;
  border-radius: 10px;
}

/* Big screens */
@media (min-width: 1112px) {
  .content {
    max-width: 1012px;
    margin: 100px auto;
  }
}

/* small screen */
@media (max-width: 600px) {
  .content {
    margin: 0;
  }
}

@media (min-width: 1112px) {
  .header {
    margin: auto;
    border-bottom-style: solid;
    border-bottom-width: 2px;
    font-size: 1.8rem;
  }
}

/* small screen */
@media (max-width: 1112px) {
  .header {
    margin: auto;
    border-bottom-style: solid;
    border-bottom-width: 2px;
    font-size: 1.4rem;
  }
}

.header .links a {
  padding: 0 0.8rem;
  text-transform: uppercase;
}

.header a:link {
  text-decoration: none;
}

.header a:visited {
  text-decoration: none;
}

.header a:hover {
  text-decoration: underline;
}

.header a:active {
  text-decoration: underline;
}

.header .nav {
  margin: auto;
  max-width: 1012px;
  padding: 1rem 0.5rem;
}

.header .nav .social {
  float: right;
}

.intro {
  margin: 8vh 0;
  text-align: center;
}

/* Blog */

.blog {
  margin: 8vh auto;
}

.blog h2 {
  text-align: center;
}

.blog-container {
  display: grid;
  grid-template-columns: 50% 50%;
}

/* medium screen and below */
@media (max-width: 1112px) {
  .blog-container {
    grid-template-columns: 100%;
  }
}

.blog-article {
  padding: 0 1em;
}

.centered {
  text-align: center;
}

footer {
  text-align: center;
  margin: 30px 0;
}

.card {
  --shadow-baseline: 4px;
  /* Add shadows to create the "card" effect */
  box-shadow: 0 var(--shadow-baseline) calc(2 * var(--shadow-baseline)) 0
    rgba(0, 0, 0, 0.2);
  transition: 0.3s;
  margin: 2em;
  font-size: 0.8rem;
}

/* small screen */
@media (max-width: 600px) {
  .card {
    box-shadow: none;
    margin: 0;
    border-top: 1px solid #ccc;
    border-bottom: 1px solid #ccc;
  }

  .card:hover {
    background-color: #f9f9f9;
  }
}

.card h3 {
  text-align: center;
  margin-top: 1.5rem;
}

/* On mouse-over, add a deeper shadow */
.card:hover {
  --shadow-baseline: 8px;
  cursor: pointer;
}

/* Add some padding inside the card container */
.card-container {
  padding: 1em;
}

.card-container .teaser {
  padding: 0 2em;
}

/* Code styling */

/* inline code */
code {
  font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
}

pre {
  border-radius: 5px;
  position: relative;
}

pre > code {
  border-radius: 5px;
  line-height: 1.2em;
  display: inline-block;
  min-width: 100%;
}

/* Code line highlighting */

.line:nth-child(1) {
  padding-top: 1em;
}

.line:last-child {
  padding-bottom: 1em;
}

.line {
  display: inline-block;
  min-width: 100%;
  padding-left: 1em;
  padding-right: 1em;
}

.highlight {
  background: rgba(255, 255, 255, 0.15);
}

/* Everything clipboard related */
pre .clipboard-copy {
  fill: transparent;
}

pre:hover .clipboard-copy {
  fill: white;
}

.clipboard-copy {
  transition: fill 300ms;
  transition: background 100ms;
  position: absolute;
  top: 0;
  right: 0;

  margin: 0.5em;
  padding: 0.5em;
  border: 1px solid transparent;
  border-radius: 5px;
}

.clipboard-copy:hover {
  border: 1px solid white;
}

.clipboard-copy:active {
  background: white;
}

svg.ionicon {
  display: inline-block;
  width: 1em;
  height: 1em;
}

